--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon ./src/index.js localhost 5000"
   },
+  "engines": {
+    "node": "11.9.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
