renamed backend name

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "techdegree-fullstackjs-project-12",
+  "name": "techdegree-12-backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
